--- a/rush/Kotchakorn.html
+++ b/rush/Kotchakorn.html
@@ -51,7 +51,7 @@
         <p class="lead">    Nickname : Pinmook   </p>
         <p class="lead">    Age : 18 years old  </p>
         <p class="lead">    Date of birth : 23 October 2006   </p>
-        <p class="lead">    Talent :  Can speaking English  </p>
+        <p class="lead">    Skill :  Can speaking English  </p>
         <p class="lead">    Hobby : Read a book  </p>
         <p class="lead">    Study at : King Mongkut's Institute of Technology Ladkrabang</p>
         <p class="lead">    Year : 1</p>
