ขอให้รอดขอให้รวย

--- a/rush/web.html
+++ b/rush/web.html
@@ -101,13 +101,13 @@
     <div class="d-flex justify-content-around flex-wrap">
       <!-- Thitapon -->
       <div class="profile-option">
-        <img src="https://lh3.googleusercontent.com/pw/AP1GczO325VAypVndDyf_CPSvmc58PDiiOiXu45LCOewSd7SDsykZVmHcTSzXN56oZDAhUNtkk8F_AbhLyPFfHCxVlBOk01z0wCkNK58H6bxMyfXFKYlSn3j_bq8-XrDRpMXUtWcTkF45J0A786zFNmf1whC=w1066-h1422-s-no" alt="  ">
-        <a href="http://bit.ly/483Q0Q9" class="btn btn-primary mt-2">Thitapon</a>
+        <img src="https://i.postimg.cc/rFvX7NQX/C2-E56-D6-B-6340-4844-9-B32-40-C700-D1-DF95-Original.jpg" alt="  ">
+        <a href="http://bit.ly/483Q0Q9" class="btn btn-primary mt-2">Kotchakorn</a>
       </div>
 
       <div class="profile-option">
-        <img src="https://lh3.googleusercontent.com/pw/AP1GczNDE2nDCto7Oj0h2FL90tRnCP1iGwJdRomhKKyu0qWlWm7Q21bMaD1Eym62gGZQsudPvLWtARgaPRWnnnALBcsA8n86G8d7rgLmh4umoiSbFTJfE1rugomePMuF1BE0BSxOt4kinAonzae2C-6LKAac=w632-h902-s-no" alt="   ">
-        <a href="http://bit.ly/3KgCkaA" class="btn btn-secondary mt-2">Nicharee</a>
+        <img src="https://i.postimg.cc/tTJQ6S2f/IMG-1711.jpg"" alt="   ">
+        <a href="http://bit.ly/3KgCkaA" class="btn btn-secondary mt-2">Siriyakorn</a>
       </div>
     </div>
   </div>
