--- a/rush/web.html
+++ b/rush/web.html
@@ -102,12 +102,12 @@
       <!-- Thitapon -->
       <div class="profile-option">
         <img src="https://i.postimg.cc/rFvX7NQX/C2-E56-D6-B-6340-4844-9-B32-40-C700-D1-DF95-Original.jpg" alt="  ">
-        <a href="http://bit.ly/483Q0Q9" class="btn btn-primary mt-2">Kotchakorn</a>
+        <a href="https://fantastic-goggles-wrq74wj9wrpp25pv7-3000.app.github.dev/rush/Kotchakorn.html" class="btn btn-primary mt-2">Kotchakorn</a>
       </div>
 
       <div class="profile-option">
         <img src="https://i.postimg.cc/tTJQ6S2f/IMG-1711.jpg"" alt="   ">
-        <a href="http://bit.ly/3KgCkaA" class="btn btn-secondary mt-2">Siriyakorn</a>
+        <a href="https://fantastic-goggles-wrq74wj9wrpp25pv7-3000.app.github.dev/rush/Siriyakorn.html?serverWindowId=b7eaf589-e028-408b-b16d-7bd5bfe74872" class="btn btn-secondary mt-2">Siriyakorn</a>
       </div>
     </div>
   </div>
